# warren

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
example/: main.py
tests/: conftest.py
tests/amqp/: test_events.py  test_rpc.py
uservice/: __init__.py  __main__.py  contexts.py  dependencies.py  entrypoints.py  importer.py  main.py  runner.py  service.py  settings.py  utils.py
uservice/amqp/: consumer.py  events.py  rpc.py
uservice/cli/: __init__.py  run.py
uservice/supervisors/: __init__.py  change_reload.py  multiprocess.py  subprocess.py
